# codebase_security_check_agent

./: README.md  pyproject.toml
.github/workflows/: security-ai-agent.yml
.security-agent/runs/20260228T062727Z/: findings.json  metadata.json  security-report.md
.security-agent/runs/20260228T064905Z/: findings.json  metadata.json  security-report.md
skills/security-ai-agent/: SKILL.md
skills/security-ai-agent/agents/: openai.yaml
skills/security-ai-agent/references/: prompts.md
src/security_ai_agent/: __init__.py  chunking.py  cli.py  dedup.py  discovery.py  explain.py  model_client.py  passes.py  redaction.py  reporter.py  schemas.py
src/security_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_dedup.py  test_discovery.py  test_explain.py  test_passes.py  test_redaction.py  test_reporting.py
tests/fixtures/vuln_repo/: app.py  auth.js  logging.py
tests/fixtures/vuln_repo/docs/: notes.md
