[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-ai-agent"
version = "0.1.0"
description = "AI-driven security codebase analysis across offensive, defensive, privacy, and realism lenses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "openai>=1.40.0,<2",
]

[project.scripts]
security-agent = "security_ai_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
